deploy/cf_demo_stack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Demo deployment configuration for Data Dashboard
Parameters:
  SSHIP:
    Description: Valid ip address for ssh access
    Type: String
Resources:
  DDBoardInstanceVolume:
    Type: AWS::EC2::Volume
    Properties:
      Size: 12
      VolumeType: gp2
      AvailabilityZone: 'us-east-2a'
  DDBoardInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: 't2.small'
      ImageId: 'ami-0f7919c33c90f5b58'
      KeyName: 'ddboard-keypair'
      SecurityGroupIds:
        - !Ref DDBoardSG
      SubnetId: 'subnet-05e1932c38404fdaf'
      Volumes:
        - VolumeId: !Ref DDBoardInstanceVolume
          Device: /dev/sdk
  DDBoardSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow inbound traffic from ssh
      SecurityGroupIngress:
        - CidrIp: !Ref SSHIP
          IpProtocol: 'tcp'
          FromPort: 22
          ToPort: 22
        - CidrIp: '0.0.0.0/0'
          IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
        - CidrIp: '0.0.0.0/0'
          IpProtocol: 'tcp'
          FromPort: 443
          ToPort: 443
      VpcId: 'vpc-01f3e3646a79a9de4'
  DDBoardDNS:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: Z1BCEFCIPZKK6I
      Name: dashboard.jackhay.io
      Type: A
      TTL: '900'
      ResourceRecords:
        - !GetAtt 'DDBoardInstance.PublicIp'
Outputs:
  InstanceIP:
    Description: Public IP address of EC2 instance
    Value: !GetAtt 'DDBoardInstance.PublicIp'
